; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/quatech_usb2/extr_quatech_usb2.c_qt2_boxunsetsw_flowctl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/quatech_usb2/extr_quatech_usb2.c_qt2_boxunsetsw_flowctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_serial = type { i32 }

@QT2_SW_FLOW_CONTROL_DISABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_serial*, i32)* @qt2_boxunsetsw_flowctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qt2_boxunsetsw_flowctl(%struct.usb_serial* %0, i32 %1) #0 {
  %3 = alloca %struct.usb_serial*, align 8
  %4 = alloca i32, align 4
  store %struct.usb_serial* %0, %struct.usb_serial** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.usb_serial*, %struct.usb_serial** %3, align 8
  %6 = getelementptr inbounds %struct.usb_serial, %struct.usb_serial* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.usb_serial*, %struct.usb_serial** %3, align 8
  %9 = getelementptr inbounds %struct.usb_serial, %struct.usb_serial* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @usb_sndctrlpipe(i32 %10, i32 0)
  %12 = load i32, i32* @QT2_SW_FLOW_CONTROL_DISABLE, align 4
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @usb_control_msg(i32 %7, i32 %11, i32 %12, i32 64, i32 0, i32 %13, i32* null, i32 0, i32 300)
  ret i32 %14
}

declare dso_local i32 @usb_control_msg(i32, i32, i32, i32, i32, i32, i32*, i32, i32) #1

declare dso_local i32 @usb_sndctrlpipe(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
